# chebychev

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
algorithm/: CMakeLists.txt  global.cpp  global.h  matrix_function.cpp  matrix_function.h
config/: example101.ini  example201.ini  example301.ini  test.ini
data/: Boundary.cpp  Boundary.h  CMakeLists.txt  Coefficients.cpp  Coefficients.h  ExactSolution.cpp  ExactSolution.h  InitialConditions.cpp  InitialConditions.h  RHS.cpp  RHS.h
examples/: CMakeLists.txt  README.md
examples/EckhardtGrimmHochbruck2026/: README.md  runall.cc
examples/EckhardtGrimmHochbruck2026/chebyshev_arnoldi/: CMakeLists.txt  chebyshev_arnoldi.cc
examples/EckhardtHochbruck2026/: CMakeLists.txt
examples/EckhardtHochbruck2026/matrix_functions_conv_velocity/: CMakeLists.txt  clc_matrix_func.cc
examples/EckhardtHochbruck2026/matrix_functions_strong_damp/: CMakeLists.txt  clc_matrix_func.cc
generating/: CMakeLists.txt  MicroProblem.cpp  MicroProblem.h
processing/: CMakeLists.txt  process_solution.cpp  process_solution.h  solving.cpp  solving.h
tests/: CMakeLists.txt
tests/conv/: CMakeLists.txt  testconvIMEXE1D.cc  testconvIMEXR1D.cc  testconvIMPMID1D.cc  testconvexpoEuler_cheb.cc  testconvexpoEuler_cheb_approx_ell.cc  testconvexpoEuler_poly_krylov.cc  testconvexpoEuler_rat_krylov.cc  testconvspace1D.cc
tests/matrix_func/: testmfuncCHEB.cc  testmfuncPOLKRYLOV.cc  testmfuncRATKRYLOV.cc  testmfuncfindoptellipse.cc
tests/micro/: testmicrosolution1D.cc  testmicrosolution1D.output  testmicrosolution2D.cc  testmicrosolution2D.output  testmicrosolutionsym1D.cc
tests/types/: testtypes_create_ellipses.cc  testtypes_inv_matrix.cc
time_integration/: CMakeLists.txt  IMEXArs3.cpp  IMEXArs3.h  IMEXE.cpp  IMEXE.h  IMEXR.cpp  IMEXR.h  TimeIntegrator.cpp  TimeIntegrator.h  explicit_Midpoint.cpp  explicit_Midpoint.h  expoEuler.cpp  expoEuler.h  imp_Midpoint.cpp  imp_Midpoint.h
time_integration/expoInt_tools/: arnoldikrylov.cpp  arnoldikrylov.h  calc_eigen.cpp  calc_eigen.h  chebyshev_approx.cpp  chebyshev_approx.h  expoInt.cpp  expoInt.h  findellipse.cpp  findellipse.h
tools/: CMakeLists.txt  Output.cpp  Output.h  README.md  ellipse_plot_and_tabel.py  matrixfunction_error_table.py
types/: BlockMatrix.cpp  BlockMatrix.h  BlockMatrixOp.cpp  BlockMatrixOp.h  BlockMatrixpetsc.h  CMakeLists.txt  Ellipse.cpp  Ellipse.h  Functions_for_matrix.cpp  Functions_for_matrix.h  InverseMatrix.cpp  InverseMatrix.h  InverseMatrixBase.h  InverseMatrixPETSc.cpp  InverseMatrixPETSc.h  README.md
